--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/src/Netflix.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap"
@@ -16,7 +16,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Vite App</title>
+    <title>Netflix India-Watch Tv Shows And Movies</title>
     <style>
       * {
         font-family: "Roboto", sans-serif;
